test/src/e2e_vm_tests/test_programs/should_pass/language/associated_const_trait_const/src/main.sw
script;

trait T {
    const C: bool;
}

struct S {}

impl T for S {
    const C: bool = true;
}

fn main() -> bool {
    S::C
}
