test/src/e2e_vm_tests/test_programs/should_fail/generics_not_supported/src/lib_a/inner_lib.sw
library;

pub const C: u64 = 42;

pub fn func() -> bool {
    true
}

pub struct S2<T> {}
